--- a/demo/modifyParams/index.html
+++ b/demo/modifyParams/index.html
@@ -1,19 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
-    <link rel="manifest" href="./manifest.json">
-    <link rel="shortcut icon" href="./favicon.ico">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1,shrink-to-fit=no"
+    />
+    <meta name="theme-color" content="#000000" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="shortcut icon" href="/favicon.ico" />
     <title>React App</title>
-    <link href="./static/css/main.95c1ab7e.css" rel="stylesheet">
-</head>
-
-<body><noscript>You need to enable JavaScript to run this app.</noscript>
+    <link href="/static/css/main.95c1ab7e.css" rel="stylesheet" />
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script type="text/javascript" src="./static/js/main.e742f2ee.js"></script>
-</body>
-
+    <script type="text/javascript" src="./static/js/main.46e77db6.js"></script>
+  </body>
 </html>
