--- a/demo/modifyParams/index.html
+++ b/demo/modifyParams/index.html
@@ -7,10 +7,10 @@
       content="width=device-width,initial-scale=1,shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
-    <link rel="manifest" href="/manifest.json" />
-    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="manifest" href="./manifest.json" />
+    <link rel="shortcut icon" href="./favicon.ico" />
     <title>React App</title>
-    <link href="/static/css/main.95c1ab7e.css" rel="stylesheet" />
+    <link href="./static/css/main.95c1ab7e.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
